fix operation bar on narrow screen

--- a/src/app/components/stories/stories.component.scss
+++ b/src/app/components/stories/stories.component.scss
@@ -38,7 +38,7 @@ mat-icon {
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1100px) {
     .operation-bar {
         display: flex;
         flex-direction: column;
